skin/frontend/default/default/css/boxes.css
/* ... */
/********************** Product Detail */
/* Product Images */
.product-img-box { float:left; width:267px; }
.product-img-box .main-product-img {
    position:relative;
    overflow:hidden;
    width:265px;
    height:265px;
    z-index:9;
    }
.product-img-box .main-product-img img {
    position:absolute;
    left:2px;
    top:2px;
    width:100%;
    cursor:move;
    z-index:99;
    }
.image-zoom {
    z-index:9; position:relative; height:18px; margin:0 auto 13px auto; background:url(../images/slider_bg.gif) no-repeat 50% 50%; padding:0 28px 0 28px; cursor:pointer; }
#image { width:auto; }
#track { position:relative; height:18px; }
#handle { position:absolute; left:0; top:-1px; width:9px; height:22px;background:url(../images/magnifier_handle.gif) no-repeat;  }
.btn-zoom-out { position:absolute; left:2px; top:1px;}
.btn-zoom-in { position:absolute; right:2px; top:1px;}
.product-img-box .more-views h4 { border-bottom:1px solid #ccc; margin-bottom:.8em; font-size:.95em; text-transform:uppercase; }
.product-img-box .more-views li { float:left; margin-right:6px;}
.product-img-box .more-views li.last { margin-right:0; }
.product-img-box .more-views li img { border:2px solid #ddd; }

.product-info-box { margin-top:10px; border:1px solid #c4c6c8; margin-top:0; }
.product-info-box .product-name {
    margin-bottom:.3em;
    color:#0a263c;
    font-size:1.2em;
    }
.product-info-box .qty-box { float:left; margin-right:5px; }
.product-info-box .price-box { margin:10px 0;}
.add-to-cart-box { float:left; width:195px;  margin-right:5px;}
.add-to-box { float:left; font-size:.95em; line-height:1.25em; }
.product-info-box .ratings { margin-bottom:1em;}

.product-attributes, .product-pricing { margin:10px 0; background:#faf7ee; padding:10px; border:1px dashed #a59e89;}
.product-attributes td {padding:2px 0; }
.product-attributes td.label { padding-right:10px; font-weight:bold; }
.product-essential, .product-collateral { padding:25px; }
.product-essential { padding:25px; background:url(../images/product_essential_bg.gif) no-repeat 100% 0 #fff; }
.product-essential .product-shop { width:330px; }
.product-essential .product-shop .ratings { margin-bottom:4px; }

/* Product Collateral */
.product-collateral { background:url(../images/product_collateral_bg.gif) repeat-x #faf7ee; }
.product-collateral .head { margin-bottom:1em; border-bottom:1px solid #e5dcc3; padding-bottom:1px; font-size:1.15em; }
.product-collateral .collateral-box { margin-bottom:2em;  }
.product-collateral .collateral-box h4{ color:#E26703 ;}
.product-collateral .attribute-specs table { border-color:#d9DDE3; }
.product-collateral .attribute-specs .label { font-weight:bold; }
.product-collateral .attribute-specs .data { border-right:0; }
.product-collateral .attribute-specs td { padding-top:3px; padding-bottom:3px; line-height:1.25em; }

.product-collateral .up-sell .head { padding-bottom:8px; margin-bottom:0; }
.product-collateral .up-sell .generic-product-grid { border:1px solid #E5DCC3; border-top:0; }
.product-collateral .up-sell .generic-product-grid td { width:25%; border-color:#E5DCC3; background:#f6f2e7; padding-top:15px; }
.product-collateral .up-sell .generic-product-grid td img { border:1px solid #E5DCC3; }
.product-collateral .up-sell .generic-product-grid .product-image { text-align:center; }
.product-collateral .up-sell .generic-product-grid td.empty-product { background:#f1ecdb; }
#customer-reviews { margin-bottom:15px; }
#customer-reviews li { margin-bottom:25px; }
#customer-reviews li p { clear:both; }
.product-collateral .add-tag-box .input-box { float:left; width:302px; margin-right:8px; }
.product-collateral .add-tag-box .input-box .input-text { width:300px;  }
.tags-list { margin-bottom:15px; }
.tags-list li {
    display:inline;
    background:url(../images/separator.gif) no-repeat 100% .4em;
    padding:0 8px 0 4px;
    }
.tags-list li.first { padding-left:0; }
.tags-list li.last { background:none; }
.add-tag-box { background:url(../images/icon_tag_add.gif) no-repeat 0 2px; padding-left:23px; }
.product-review-box { width:auto; margin:8px 0 13px 0; }
.product-review-box td, .product-review-box th { text-align:center; }
.product-review-box td.label {width:100px; text-align:left; }

/* Product Detail sidebar */
.mini-related-items .head h4 { background-image:url(../images/icon_clip.gif); }
.mini-related-items .product-images { width:70px; }
.mini-related-items .product-images input { float:left; margin-right:4px;  }
.mini-related-items .product-details { margin-left:78px; }
.mini-related-items ol li { padding-left:0 ; padding-right:0; }
.mini-related-items .super-products { padding-left:17px; }
.mini-related-items .super-products .product-images { width:52px;}
.mini-related-items .super-products .product-details { width:70px; margin-left:61px; }

/********************** Checkout */

.shipment-methods dd { margin-bottom:13px; }
.payment-methods dt { margin-bottom:5px; }
.payment-methods dd { padding:5px 20px; }


/* Shopping Cart */
.shopping-cart  { margin-bottom:0; }
.shopping-cart th, .shopping-cart td { padding-left:13px; padding-right:13px; }
.shopping-cart tr.error { background:#FDE6E0 !important; }
.shopping-cart .continue-shopping { float: left; }
.shopping-cart-item-message {margin-bottom:5px}
td.attributes-col { line-height:1.4em; }
td.attributes-col ul { margin:5px 0; font-size:.95em;}
td.attributes-col dt {
    margin-top:.5em;
    font-size:.95em;
    font-weight:bold;
    }
td.attributes-col dd ul { margin: 0 0 5px 0; }
td.attributes-col dd ul li { margin-left:15px; list-style:disc; }

.shopping-cart-totals {
    width:248px;
    float:right;
    margin-top:25px;
    border:1px solid #BEBCB7;
    background:#DEE5E8;
    text-align:right;
    }
.shopping-cart-totals table { width:100%; margin-top:7px; }
.shopping-cart-totals td { padding:0 15px; }
.shopping-cart-totals tr.last td { padding-bottom:5px; }
.shopping-cart-totals tfoot td {
    font-size:1.3em;
    }
/* ... */

